--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Hello Microverse</title>
+    <h1><a href="https://github.com/Erick-Osterling/pi-pokemon">PI-Pokemons</a></h1>
+    <h1><a href="https://drive.google.com/file/d/1ojL_9teHOS5y0_d2DSFkLmtrz8mMn2pK/view?usp=sharing">Final Project</a></h1>
+
 </head>
 <body>
     <h1 class="firstclass">Hello Microverse!</h1>   
